--- a/src/Traisi.Export/appsettings.json
+++ b/src/Traisi.Export/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-     // "DefaultConnection": "Server=localhost;Database=covhits;Username=postgres;Password=pass$word"
+     "DefaultConnection": "Server=localhost;Database=prodpilotdb7;Username=postgres;Password=pass$word"
 
   },
 
