Added OrderBy to responses in Travel Diary output.

--- a/src/Traisi.Export/appsettings.json
+++ b/src/Traisi.Export/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-     "DefaultConnection": "Server=localhost;Database=covhits;Username=traisi;Password=traisi"
+     "DefaultConnection": "Server=localhost;Database=prodpilotdb41;Username=postgres;Password=pass$word"
 
   },
 
