--- a/src/Traisi/Traisi.csproj
+++ b/src/Traisi/Traisi.csproj
@@ -55,6 +55,7 @@
 		<PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
 		<PackageReference Include="NSwag.AspNetCore" Version="13.4.2" />
+		<PackageReference Include="EPPlus" Version="5.1.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Traisi.Data\Traisi.Data.csproj" />
