--- a/src/Traisi.Export/appsettings.json
+++ b/src/Traisi.Export/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-     "DefaultConnection": "Server=localhost;Database=prodpilotdb64;Username=postgres;Password=pass$word"
+     "DefaultConnection": "Server=localhost;Database=traisi;Username=traisi;Password=traisi"
 
   },
 
