--- a/src/Traisi.Export/appsettings.json
+++ b/src/Traisi.Export/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-     "DefaultConnection": "Server=localhost;Database=traisi;Username=traisi;Password=traisi"
+     "DefaultConnection": "Server=localhost;Database=covhits-staging;Username=traisi;Password=traisi"
 
   },
 
